--- a/index.html
+++ b/index.html
@@ -5,38 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Beer and a Show</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 
-<body>
-    <header>
+<body class="font-serif">
+    <header class="p-20 text-lg justify-center bg-gradient-to-r from-sky-950 to-sky-500 h14">
         <img src="" alt="">
         <h1>Beer and a Show</h1>
     </header>
-    <div id="quote">....motto....</div>
+    <div id="quote" class="p-10 underline underline-offset-8">....motto....</div>
     <main>
-        <div id="search-div">
-            <form>
-                <select name="list-type" id="">
-                    <option value="">>Choose your search target:</option>
+        <div class="flex justify-center ">
+        <div id="search-div" class="main-form flex items-center bg-gray-100 justify-center w-3/4 shadow-xl" >
+            <form class="p-3">
+                <select name="list-type" id="" class="my-4 w-full shadow-md">
+                    <option value="">Choose your search target:</option>
                     <option value="events">only events</option>
                     <option value="breweries">only breweries:</option>
                     <option value="both">both events and breweries</option>
                 </select>
-                <input type="text" placeholder="Search by city or a zipcode">
-                <button type="submit">Search</button>
+                <input type="text" id="city-search" placeholder="Search by city" class="my-4 w-full shadow-md">
+                <button type="submit" class="my-4 w-full hover:border-black shadow-md">Search</button>
             </form>
 
         </div>
-
-        <div id="event-container">
-            <h2 id="eventList-heading"></h2>
+        </div>
+        <div class="columns-2 mt-10">
+        <div id="event-container" class="flex justify-center max-w-1/2 border-2 border-slate-950/50">
+            <h2 id="eventList-heading">Events Near Your Destination:</h2>
             <!--div boxes for a list of events will be created and appended here  -->
         </div>
 
-        <div id="brewery-container">
-            <h2 id="breweryList-heading"></h2>
+        <div id="brewery-container" class="flex justify-center max-w-1/2 border-2 border-slate-950/50">
+            <h2 id="breweryList-heading">Breweries Near Your Desination:</h2>
 
             <div id="listOf-brewieries">
                 <!--div boxes of a list of breweries will be appended here  -->
@@ -46,7 +50,7 @@
             <!--a div with a list of customer review of the breweries will be appended here.   -->
             <div class="cutomer-review"></div>
         </div>
-
+        </div>
         <div id="listOfThings-todo">
             <!-- when the things to do button get clicked it displays all the information/activities in the chosen city -->
             <button id="things-todo-btn" class="hide-btn"></button>
