minor modification on the functionality

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
         <div id="brewery-container" class="flex justify-center max-w-1/2 border-2 border-slate-950/50">
             <h2 id="breweryList-heading">Breweries Near Your Desination:</h2>
-
+<!-- 
             <div id="listOf-brewieries">
-                <!--div boxes of a list of breweries will be appended here  -->
-            </div>
+                div boxes of a list of breweries will be appended here  -->
+            <!-- </div> -->
             <!-- when the customer's review button get clicked it displays all the comments about each breweries  -->
             <!-- <button id="review-btn" class="hide-btn"></button> -->
             <!--a div with a list of customer review of the breweries will be appended here.   -->
