--- a/index.html
+++ b/index.html
@@ -41,10 +41,43 @@
 
         <div id="brewery-container" class="flex justify-center max-w-1/2 border-2 border-slate-950/50">
             <h2 id="breweryList-heading">Breweries Near Your Desination:</h2>
-<!-- 
-            <div id="listOf-brewieries">
-                div boxes of a list of breweries will be appended here  -->
-            <!-- </div> -->
+            <div class="flex flex-col">
+            <div id="brewery0" class="flex max-w-2/5">
+                <p id="name0"></p>
+                <p id="type0"></p>
+                <p id="address0"></p>
+                <p id="phone0"></p>
+                <p id="website0"></p>
+            </div>
+            <div id="brewery1" class="flex max-w-2/5">
+                <p id="name1"></p>
+                <p id="type1"></p>
+                <p id="address1"></p>
+                <p id="phone1"></p>
+                <p id="website1"></p>
+            </div>
+            <div id="brewery2" class="flex max-w-2/5">
+                <p id="name2"></p>
+                <p id="type2"></p>
+                <p id="address2"></p>
+                <p id="phone2"></p>
+                <p id="website2"></p>
+            </div>
+            <div id="brewery3" class="flex max-w-2/5">
+                <p id="name3"></p>
+                <p id="type3"></p>
+                <p id="address3"></p>
+                <p id="phone3"></p>
+                <p id="website3"></p>
+            </div>
+            <div id="brewery4" class="flex max-w-2/5">
+                <p id="name4"></p>
+                <p id="type4"></p>
+                <p id="address4"></p>
+                <p id="phone4"></p>
+                <p id="website4"></p>
+            </div>
+        </div>
             <!-- when the customer's review button get clicked it displays all the comments about each breweries  -->
             <!-- <button id="review-btn" class="hide-btn"></button> -->
             <!--a div with a list of customer review of the breweries will be appended here.   -->
@@ -62,7 +95,7 @@
 
     </main>
 
-
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="./assets/script.js"></script>
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlat17P_RNHtWDKcyqXPwNrq5p78AUymk&libraries=places"></script> -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlat17P_RNHtWDKcyqXPwNrq5p78AUymk&libraries=places&callback=initMap"></script>
