--- a/index.html
+++ b/index.html
@@ -33,44 +33,44 @@
 
         </div>
         </div>
-        <div class="columns-2 mt-10">
-        <div id="event-container" class="flex justify-center max-w-1/2 border-2 border-slate-950/50">
+        <div class="flex  mt-10">
+        <div id="event-container" class="flex justify-center  border-2 border-slate-950/50">
             <h2 id="eventList-heading">Events Near Your Destination:</h2>
             <!--div boxes for a list of events will be created and appended here  -->
         </div>
 
-        <div id="brewery-container" class="flex justify-center max-w-1/2 border-2 border-slate-950/50">
+        <div id="brewery-container" class="flex flex-col justify-center  border-2 border-slate-950/50">
             <h2 id="breweryList-heading">Breweries Near Your Desination:</h2>
-            <div class="flex flex-col">
-            <div id="brewery0" class="flex max-w-2/5">
+            <div class="">
+            <div id="brewery0" class="border-2 border-slate-950/50">
                 <p id="name0"></p>
                 <p id="type0"></p>
                 <p id="address0"></p>
                 <p id="phone0"></p>
                 <p id="website0"></p>
             </div>
-            <div id="brewery1" class="flex max-w-2/5">
+            <div id="brewery1" class="border-2 border-slate-950/50">
                 <p id="name1"></p>
                 <p id="type1"></p>
                 <p id="address1"></p>
                 <p id="phone1"></p>
                 <p id="website1"></p>
             </div>
-            <div id="brewery2" class="flex max-w-2/5">
+            <div id="brewery2" class="border-2 border-slate-950/50">
                 <p id="name2"></p>
                 <p id="type2"></p>
                 <p id="address2"></p>
                 <p id="phone2"></p>
                 <p id="website2"></p>
             </div>
-            <div id="brewery3" class="flex max-w-2/5">
+            <div id="brewery3" class="border-2 border-slate-950/50">
                 <p id="name3"></p>
                 <p id="type3"></p>
                 <p id="address3"></p>
                 <p id="phone3"></p>
                 <p id="website3"></p>
             </div>
-            <div id="brewery4" class="flex max-w-2/5">
+            <div id="brewery4" class="border-2 border-slate-950/50">
                 <p id="name4"></p>
                 <p id="type4"></p>
                 <p id="address4"></p>
