Ticketmaster API is working and pushing the data to the webpage

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <href id="event-url0">
                 </div>
                 <div id="event1" class="border-2 border-slate-950/50">
-                    <p id="even-name1"></p>
+                    <p id="event-name1"></p>
                     <img id="event-img1">
                     <p id="event-venue1"></p>
                     <p id="event-date1"></p>
