--- a/index.html
+++ b/index.html
@@ -40,38 +40,38 @@
             
                 <div id="event0" class="border-2  border-slate-950/50">
                     <p id="event-name0"></p>
-                    <img id="event-img0">
+                    <p id="event-image0"></p>
                     <p id="event-venue0"></p>
                     <p id="event-date0"></p>
-                    <href id="event-url0">
+                    <p id="event-url0"></p>
                 </div>
                 <div id="event1" class="border-2 border-slate-950/50">
                     <p id="event-name1"></p>
-                    <img id="event-img1">
+                    <p id="event-image1"></p>
                     <p id="event-venue1"></p>
                     <p id="event-date1"></p>
-                    <href id="event-url1">
+                    <p id="event-url1"></p>
                 </div>
                 <div id="event2" class="border-2 border-slate-950/50">
                     <p id="event-name2"></p>
-                    <img id="event-img2">
+                    <p id="event-image2"></p>
                     <p id="event-venue2"></p>
                     <p id="event-date2"></p>
-                    <href id="event-url2">
+                    <p id="event-url2"></p>
                 </div>
                 <div id="event3" class="border-2 border-slate-950/50">
                     <p id="event-name3"></p>
-                    <img id="event-img3">
+                    <p id="event-image3"></p>
                     <p id="event-venue3"></p>
                     <p id="event-date3"></p>
-                    <href id="event-url3">
+                    <p id="event-url3"></p>   
                 </div>
                 <div id="event4" class="border-2 border-slate-950/50">
                     <p id="event-name4"></p>
-                    <img id="event-img4">
+                    <p id="event-image4"></p>
                     <p id="event-venue4"></p>
                     <p id="event-date4"></p>
-                    <href id="event-url4">
+                    <p id="event-url4"></p>
                 </div>
         
         </div>
