moved the border classes to jquery so that we have a cleaner appearance before the api's are fetched

--- a/index.html
+++ b/index.html
@@ -38,35 +38,35 @@
             <h2 id="eventList-heading">Events Near Your Destination:</h2>
             <!--div boxes for a list of events will be created and appended here  -->
             
-                <div id="event0" class="border-2  border-slate-950/50">
+                <div id="event0" >
                     <p id="event-name0"></p>
                     <p id="event-image0"></p>
                     <p id="event-venue0"></p>
                     <p id="event-date0"></p>
                     <p id="event-url0"></p>
                 </div>
-                <div id="event1" class="border-2 border-slate-950/50">
+                <div id="event1" >
                     <p id="event-name1"></p>
                     <p id="event-image1"></p>
                     <p id="event-venue1"></p>
                     <p id="event-date1"></p>
                     <p id="event-url1"></p>
                 </div>
-                <div id="event2" class="border-2 border-slate-950/50">
+                <div id="event2">
                     <p id="event-name2"></p>
                     <p id="event-image2"></p>
                     <p id="event-venue2"></p>
                     <p id="event-date2"></p>
                     <p id="event-url2"></p>
                 </div>
-                <div id="event3" class="border-2 border-slate-950/50">
+                <div id="event3">
                     <p id="event-name3"></p>
                     <p id="event-image3"></p>
                     <p id="event-venue3"></p>
                     <p id="event-date3"></p>
                     <p id="event-url3"></p>   
                 </div>
-                <div id="event4" class="border-2 border-slate-950/50">
+                <div id="event4">
                     <p id="event-name4"></p>
                     <p id="event-image4"></p>
                     <p id="event-venue4"></p>
@@ -78,35 +78,35 @@
         <div id="brewery-container" class="flex flex-col justify-center  border-2 w-1/2 border-slate-950/50">
             <h2 id="breweryList-heading">Breweries Near Your Desination:</h2>
             
-            <div id="brewery0" class="border-2 border-slate-950/50">
+            <div id="brewery0">
                 <p id="name0"></p>
-                <p id="type0"></p>
+                <p id="type0" ></p>
                 <p id="address0"></p>
                 <p id="phone0"></p>
                 <p id="website0"></p>
             </div>
-            <div id="brewery1" class="border-2 border-slate-950/50">
+            <div id="brewery1">
                 <p id="name1"></p>
-                <p id="type1"></p>
+                <p id="type1" ></p>
                 <p id="address1"></p>
                 <p id="phone1"></p>
                 <p id="website1"></p>
             </div>
-            <div id="brewery2" class="border-2 border-slate-950/50">
+            <div id="brewery2">
                 <p id="name2"></p>
                 <p id="type2"></p>
                 <p id="address2"></p>
                 <p id="phone2"></p>
                 <p id="website2"></p>
             </div>
-            <div id="brewery3" class="border-2 border-slate-950/50">
+            <div id="brewery3">
                 <p id="name3"></p>
                 <p id="type3"></p>
                 <p id="address3"></p>
                 <p id="phone3"></p>
                 <p id="website3"></p>
             </div>
-            <div id="brewery4" class="border-2 border-slate-950/50">
+            <div id="brewery4">
                 <p id="name4"></p>
                 <p id="type4"></p>
                 <p id="address4"></p>
