solved remaining issues from merge conflict

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
         
         </div>
-        <div id="brewery-container" class="flex flex-col justify-center  border-2 w-1/2 border-slate-950/50">
+        <div id="brewery-container" class="flex flex-col  border-2 w-1/2 border-slate-950/50">
             <h2 id="breweryList-heading">Breweries Near Your Desination:</h2>
             
             <div id="brewery0">
