set image url from ticketmaster API to the background image for the appropriate div and linked website to full div

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
         <div id="event-container" class="flex flex-col w-1/2 border-2 border-slate-950/50">
             <h2 id="eventList-heading">Events Near Your Destination:</h2>
             <!--div boxes for a list of events will be created and appended here  -->
-            
-                <div id="event0" >
+                <a href="" id="event-link0">
+                <div id="event0">
                     <p id="event-name0"></p>
                     <p id="event-image0"></p>
                     <p id="event-venue0"></p>
                     <p id="event-date0"></p>
                     <p id="event-url0"></p>
                 </div>
+            </a>
+            <a href="" id="event-link1">
                 <div id="event1" >
                     <p id="event-name1"></p>
                     <p id="event-image1"></p>
@@ -56,6 +58,8 @@
                     <p id="event-date1"></p>
                     <p id="event-url1"></p>
                 </div>
+            </a>
+            <a href="" id="event-link2">
                 <div id="event2">
                     <p id="event-name2"></p>
                     <p id="event-image2"></p>
@@ -63,20 +67,25 @@
                     <p id="event-date2"></p>
                     <p id="event-url2"></p>
                 </div>
-                <div id="event3">
+            </a>
+            <a href="" id="event-link3">
+                <div id="event3" >
                     <p id="event-name3"></p>
                     <p id="event-image3"></p>
                     <p id="event-venue3"></p>
                     <p id="event-date3"></p>
                     <p id="event-url3"></p>   
                 </div>
-                <div id="event4">
+            </a>
+            <a href="" id="event-link4">
+                <div id="event4" >
                     <p id="event-name4"></p>
                     <p id="event-image4"></p>
                     <p id="event-venue4"></p>
                     <p id="event-date4"></p>
                     <p id="event-url4"></p>
                 </div>
+            </a>
         
         </div>
         <div id="brewery-container" class="flex flex-col  border-2 w-1/2 border-slate-950/50">
