Links will now open in a new tab

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="event-container" class="flex flex-col w-1/2 border-2 border-slate-950/50">
             <h2 id="eventList-heading">Events Near Your Destination:</h2>
             <!--div boxes for a list of events will be created and appended here  -->
-                <a href="" id="event-link0">
+                <a href="" id="event-link0" target="_blank">
                 <div id="event0">
                     <p id="event-name0"></p>
                     <p id="event-image0"></p>
@@ -50,7 +50,7 @@
                     <p id="event-url0"></p>
                 </div>
             </a>
-            <a href="" id="event-link1">
+            <a href="" id="event-link1" target="_blank">
                 <div id="event1" >
                     <p id="event-name1"></p>
                     <p id="event-image1"></p>
@@ -59,7 +59,7 @@
                     <p id="event-url1"></p>
                 </div>
             </a>
-            <a href="" id="event-link2">
+            <a href="" id="event-link2" target="_blank">
                 <div id="event2">
                     <p id="event-name2"></p>
                     <p id="event-image2"></p>
@@ -68,7 +68,7 @@
                     <p id="event-url2"></p>
                 </div>
             </a>
-            <a href="" id="event-link3">
+            <a href="" id="event-link3" target="_blank">
                 <div id="event3" >
                     <p id="event-name3"></p>
                     <p id="event-image3"></p>
@@ -77,7 +77,7 @@
                     <p id="event-url3"></p>   
                 </div>
             </a>
-            <a href="" id="event-link4">
+            <a href="" id="event-link4" target="_blank">
                 <div id="event4" >
                     <p id="event-name4"></p>
                     <p id="event-image4"></p>
@@ -90,7 +90,7 @@
         </div>
         <div id="brewery-container" class="flex flex-col  border-2 w-1/2 border-slate-950/50">
             <h2 id="breweryList-heading">Breweries Near Your Desination:</h2>
-            <a href="" class="allBrewLink">
+            <a href="" class="allBrewLink" target="_blank">
                <div id="brewery0" class="bg-none p-10 rounded-2xl shadow-lg w-full md:w-1/2">
                 <p id="name0"></p>
                 <p id="type0" ></p>
@@ -99,7 +99,7 @@
                 <p id="website0"></p>
             </div> 
             </a>
-            <a href="" class="allBrewLink">
+            <a href="" class="allBrewLink" target="_blank">
                <div id="brewery1" class="bg-none p-10 rounded-2xl shadow-lg w-full md:w-1/2">
                 <p id="name1"></p>
                 <p id="type1" ></p>
@@ -108,7 +108,7 @@
                 <p id="website1"></p>
             </div> 
             </a>
-            <a href="" class="allBrewLink">
+            <a href="" class="allBrewLink" target="_blank">
                  <div id="brewery2" class="bg-none p-10 rounded-2xl shadow-lg w-full md:w-1/2">
                 <p id="name2"></p>
                 <p id="type2"></p>
@@ -117,7 +117,7 @@
                 <p id="website2"></p>
             </div>
             </a>
-           <a href="" class="allBrewLink">
+           <a href="" class="allBrewLink" target="_blank">
             <div id="brewery3" class="bg-none p-10 rounded-2xl shadow-lg w-full md:w-1/2">
                 <p id="name3"></p>
                 <p id="type3"></p>
@@ -127,7 +127,7 @@
             </div>
            </a>
             
-           <a href="" class="allBrewLink">
+           <a href="" class="allBrewLink" target="_blank">
 
             <div id="brewery4" class="bg-none p-10 rounded-2xl shadow-lg w-full md:w-1/2">
                 <p id="name4"></p>
