created media query in tailwind for event and brewery cards to dynamically adjust size with screen width

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 
 
             <div
-                class=" flex grid grid-cols-2 gap-10 mx-4 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 opacity-100 brightness-100 sm:grid-cols-1">
+                class=" flex flex-fol gap-10 mx-4 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 opacity-100 brightness-100 lg:grid lg:grid-cols-2">
                 
-                <div id="event-container flex flex-wrap"
-                    class="grid grid-cols-2 gap-2 mx-2 place-content-evenly border-double border-4 border-sky-500 ">
+                <div id="event-container "
+                    class="flex flex-col flex-wrap gap-2 mx-2 place-content-evenly border-double border-4 border-sky-500 lg:grid lg:grid-cols-2">
                     <h2 id="eventList-heading" class="flex justify-center">Events Near Your Destination:</h2>
 
                     <!--div boxes for a list of events will be created and appended here  -->
                     <a href="" id="event-link0" target="_blank">
-                        <div id="event0" class="bg-none p-4 rounded-2xl h-64 w-full brightness-100 text-end ">
+                        <div id="event0" class="allEvent bg-none p-4 rounded-2xl h-64 w-full brightness-100 text-end ">
                             <p id="event-name0"></p>
                             <p id="event-image0"></p>
                             <p id="event-venue0"></p>
@@ -57,7 +57,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link1" target="_blank">
-                        <div id="event1" class="bg-none p-4 h-64 rounded-2xl  w-full  ">
+                        <div id="event1" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full  ">
                             <p id="event-name1"></p>
                             <p id="event-image1"></p>
                             <p id="event-venue1"></p>
@@ -66,7 +66,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link2" target="_blank">
-                        <div id="event2" class="bg-none p-4 h-64 rounded-2xl  w-full">
+                        <div id="event2" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full">
                             <p id="event-name2"></p>
                             <p id="event-image2"></p>
                             <p id="event-venue2"></p>
@@ -75,7 +75,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link3" target="_blank">
-                        <div id="event3" class="bg-none p-4 h-64 rounded-2xl  w-full">
+                        <div id="event3" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full">
                             <p id="event-name3"></p>
                             <p id="event-image3"></p>
                             <p id="event-venue3"></p>
@@ -84,7 +84,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link4" target="_blank">
-                        <div id="event4" class="bg-none p-4 h-64 rounded-2xl w-full">
+                        <div id="event4" class="allEvent bg-none p-4 h-64 rounded-2xl w-full">
                             <p id="event-name4"></p>
                             <p id="event-image4"></p>
                             <p id="event-venue4"></p>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div id="brewery-container flex flex-wrap"
-                    class="grid grid-cols-2 gap-2 mx-2 place-content-evenly border-double border-4 border-sky-500 ">
+                    class="flex flex-col lg:grid lg:grid-cols-2 gap-2 mx-2 place-content-evenly border-double border-4 border-sky-500 ">
 
                     <h2 id="eventList-heading" class="flex justify-center">Breweries Near Your Destination:</h2>
 
