added hover effect to cards

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                     <!--div boxes for a list of events will be created and appended here  -->
                     <a href="" id="event-link0" target="_blank">
-                        <div id="event0" class="allEvent bg-none p-4 rounded-2xl h-64 w-full brightness-100 text-bottom ">
+                        <div id="event0" class="allEvent bg-none p-4 rounded-2xl h-64 w-full brightness-100 hover:border-4 hover:border-sky-500">
                             <p id="event-name0"></p>
                             <p id="event-image0"></p>
                             <p id="event-venue0"></p>
@@ -59,7 +59,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link1" target="_blank">
-                        <div id="event1" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full  ">
+                        <div id="event1" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full  hover:border-4 hover:border-sky-500">
                             <p id="event-name1"></p>
                             <p id="event-image1"></p>
                             <p id="event-venue1"></p>
@@ -68,7 +68,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link2" target="_blank">
-                        <div id="event2" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full">
+                        <div id="event2" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                             <p id="event-name2"></p>
                             <p id="event-image2"></p>
                             <p id="event-venue2"></p>
@@ -77,7 +77,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link3" target="_blank">
-                        <div id="event3" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full">
+                        <div id="event3" class="allEvent bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                             <p id="event-name3"></p>
                             <p id="event-image3"></p>
                             <p id="event-venue3"></p>
@@ -86,7 +86,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link4" target="_blank">
-                        <div id="event4" class="allEvent bg-none p-4 h-64 rounded-2xl w-full">
+                        <div id="event4" class="allEvent bg-none p-4 h-64 rounded-2xl w-full hover:border-4 hover:border-sky-500">
                             <p id="event-name4"></p>
                             <p id="event-image4"></p>
                             <p id="event-venue4"></p>
@@ -95,7 +95,7 @@
                         </div>
                     </a>
                     <a href="" id="event-link5" target="_blank">
-                        <div id="event5" class="allEvent bg-none p-4 h-64 rounded-2xl w-full">
+                        <div id="event5" class="allEvent bg-none p-4 h-64 rounded-2xl w-full hover:border-4 hover:border-sky-500">
                             <p id="event-name5"></p>
                             <p id="event-image5"></p>
                             <p id="event-venue5"></p>
@@ -113,7 +113,7 @@
 
                     <div class="eachDivWrapper">
                         <a href="" class="allBrewLink" target="_blank">
-                            <div id="brewery0" class="bg-none p-4 h-64 rounded-2xl  w-full ">
+                            <div id="brewery0" class="bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                                 <p id="name0"></p>
                                 <p id="type0"></p>
                                 <p id="address0"></p>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="eachDivWrapper">
                         <a href="" class="allBrewLink" target="_blank">
-                            <div id="brewery1" class="bg-none p-4 h-64 rounded-2xl  w-full">
+                            <div id="brewery1" class="bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                                 <p id="name1"></p>
                                 <p id="type1"></p>
                                 <p id="address1"></p>
@@ -144,7 +144,7 @@
 
                     <div class="eachDivWrapper">
                         <a href="" class="allBrewLink" target="_blank">
-                            <div id="brewery2" class="bg-none p-4 h-64 rounded-2xl  w-full">
+                            <div id="brewery2" class="bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                                 <p id="name2"></p>
                                 <p id="type2"></p>
                                 <p id="address2"></p>
@@ -160,7 +160,7 @@
 
                     <div class="eachDivWrapper">
                         <a href="" class="allBrewLink" target="_blank">
-                            <div id="brewery3" class="bg-none p-4 h-64 rounded-2xl  w-full">
+                            <div id="brewery3" class="bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                                 <p id="name3"></p>
                                 <p id="type3"></p>
                                 <p id="address3"></p>
@@ -179,7 +179,7 @@
 
                         <a href="" class="allBrewLink" target="_blank">
 
-                            <div id="brewery4" class="bg-none p-4 h-64 rounded-2xl  w-full ">
+                            <div id="brewery4" class="bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                                 <p id="name4"></p>
                                 <p id="type4"></p>
                                 <p id="address4"></p>
@@ -196,7 +196,7 @@
 
                         <a href="" class="allBrewLink" target="_blank">
 
-                            <div id="brewery5" class="bg-none p-4 h-64 rounded-2xl  w-full ">
+                            <div id="brewery5" class="bg-none p-4 h-64 rounded-2xl  w-full hover:border-4 hover:border-sky-500">
                                 <p id="name5"></p>
                                 <p id="type5"></p>
                                 <p id="address5"></p>
