--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="title text-6xl font-bold">Beer and a Show</h1>
     </header>
     <div id="quote" class="p-10 underline underline-offset-8 text-3xl font-bold">Heading on a trip? Enter the city you
-        are travelling to for a list of local breweries and events coming up! Use the drop down to filter for just
+        are travelling to for a list of 6 local breweries and events coming up! Use the drop down to filter for just
         Events or Breweries.</div>
     <main>
         <!-- to scroll in all direction if needed -->
@@ -47,7 +47,7 @@
 
 
             <div id="content-containers"
-                class="flex flex-col gap-6 my-10  bg-gradient-to-r from-cyan-900 via-cyan-700 to-sky-900 md:grid md:grid-cols-2">
+                class="flex flex-wrap justify-center gap-6 my-10  bg-gradient-to-r from-cyan-900 via-cyan-700 to-sky-900 lg:grid lg:grid-cols-2">
 
                 <div id="event-container"
                     class="">
@@ -58,7 +58,7 @@
                 <h2 id="eventList-heading" class="flex justify-center underline-offset-8 text-2xl font-bold">Breweries
                     Near Your Destination:</h2> -->
                     </div>
-                    <div id="event-grid" class="flex flex-col flex-wrap gap-2 mx-2 place-content-evenly lg:grid lg:grid-cols-2 border-r-4 border-white pr-4 ">
+                    <div id="event-grid" class="flex  flex-wrap gap-2 place-content-evenly lg:grid lg:grid-cols-2">
                     <!--div boxes for a list of events will be created and appended here  -->
                     <a href="" id="event-link0" target="_blank">
                         <div id="event0"
@@ -136,7 +136,7 @@
                         Near Your Destination:</h2> -->
                     </div>
                                                   
-                    <div id="brewery-grid" class="flex flex-col flex-wrap lg:grid lg:grid-cols-2 gap-2 mx-2 place-content-evenly border-l-4 border-white pl-4">
+                    <div id="brewery-grid" class="flex flex-wrap lg:grid lg:grid-cols-2 gap-2  place-content-evenly">
                     <div class="eachDivWrapper">
                         <a href="" class="allBrewLink" target="_blank">
                             <div id="brewery0"
