Updated the coloring on the error modal so it matches the site

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
             <div id="response-notification"></div>
             <div id="main-msgcontainer" class="flex justify-center ">
                 <div id="message-modal"
-                    class="hidden bg-gradient-to-r from-cyan-500 via-cyan-700 to-sky-700 justify-center border-4 fixed w-1/4 mx-auto">
+                    class="hidden bg-gradient-to-r from-blue-950 via-teal-600 to-blue-950 justify-center border-4 fixed w-1/4 mx-auto">
                     <div class="flex flex-wrap br-ingredien-t-r ">
                         <div class="fixed-r bg-transparent" aria-hidden="true">
                             <div class="absolute opacity-75"></div>
                         </div>
                         <div class="relative text-white text-center overflow-x-auto mx-auto ">
-                            <div id="message-miniDiv" class="p-2 bg-white my-2 text-red-500 font-semibold">
+                            <div id="message-miniDiv" class="p-2 bg-white my-2 text-blue-950 font-semibold">
                                 <h4 id="msg-heading"></h4>
                                 <p >Please try again with a correct url path</p>
                             </div>
                             <button type="button" id="ok-button"
-                                    class="w-1/4 rounded-lg ring-offset-2 ring-2 opacity-100 my-1 box-border hover:box-content bg-cyan-500 hover:bg-red-500"> Ok</button>
+                                    class="w-1/4 rounded-lg ring-offset-2 ring-2 opacity-100 my-1 box-border hover:box-content bg-blue-950 hover:bg-red-500"> Ok</button>
                         </div>
                     </div>
                 </div>
