Updated the title so it is responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <body class="font-family: arial black">
-    <header class="p-20 text-lg justify-center bg-gradient-to-r from-blue-950 via-teal-600 to-blue-950 h14">
+    <header class="p-20 justify-center bg-gradient-to-r from-blue-950 via-teal-600 to-blue-950 h14">
         <img src="" alt="">
         <h1 class="title text-10xl font-bold">Beer and a Show</h1>
     </header>
