--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Beer and a Show</title>
+   
+    <!--  -->
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="shortcut icon" href="./image/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Bruno+Ace+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Bruno+Ace+SC&display=swap" rel="stylesheet">
 </head>
-
 
 <body class="font-family: arial black">
     <header class="p-20 justify-center bg-gradient-to-r from-blue-950 via-teal-600 to-blue-950 h14">
@@ -47,7 +49,7 @@
             <div id="response-notification"></div>
             <div id="main-msgcontainer" class="flex justify-center relative">
                 <div id="message-modal"
-                    class="hidden bg-gradient-to-r from-blue-950 via-teal-600 to-blue-950 justify-center border-4 fixed z-40 w-1/4 mx-auto ">
+                    class="hidden bg-gradient-to-r from-blue-950 via-teal-600 to-blue-950 border-4  sticky top-35 z-40 w-1/3 mx-auto ">
                     <div class="flex flex-wrap br-ingredien-t-r ">
                         <div class="fixed-r bg-transparent" aria-hidden="true">
                             <div class="absolute opacity-75"></div>
@@ -267,5 +269,6 @@
     <script src="./assets/script.js"></script>
     
 </body>
+
 
 </html>
